New in SVN (will be 0.11)
-------------------------

* Fixed Issue 67: completely new list layouting code
* Fixed Issue 116: crashes caused by huge images
* Better support for %width in images, n2ow it's % of the container frame's
  width, not of the text area.
* Fixed bug in SVG scaling
* Better handling of missing images
* Added missing styles abstract, contents, dedication to the default stylesheet
* Tables style support spaceBefore and spaceAfter
* New topic-title style for topic titles (obvious ;-)
* Vertical alignment for inline images (:align: parameter)
* Issue 118: Support for :scale: in images and handle resizing of inline images
* Issue 119: Fix placement of headers and footers
* New background property for page templates (nice for presentations, for example)
* Default to px for image width specifications instead of pt
* Support all required measurement units ("em" "ex" "px" "in" "cm" 
  "mm" "pt" "pc" "%" "")
* New automated scripts to check test cases for "visual differences"
* Respect images DPI property a bit like rst2latex does.
* Issue 110: New --inline-footnotes option
* Tested with reportlab from SVN trunk
* Support for Dinu Gherman's svglib. If both svglib and uniconvertor are available,
  svglib is preferred (for SVG, of course). Patch originally by rute.
* Issue 109: Separate styles for each kind of admonition
* For Issue 109: missing styles are not a fatal error
* Issue 117: TOCs with more than 6 levels now supported (raised limit to 9, which 
  is silly deep)

New in 0.10.1
-------------

* Issue 114: Fixed bug in PDF TOC for sections containing ampersands

New in 0.10
-----------

* Issue 87: Table headers can be repeated in each page (thanks to Yasushi Masuda)
* Issue 93: Line number support for code blocks (:linenos: true)
* Issue 111: Added --no-footnote-backlinks option
* Issue 107: Support localized directives/roles (example: sommaire instead of contents)
* Issue 112: Fixed crash when processing empty list items