@@ -1,6 +1,13 @@
 New in SVN (will be 0.11)
 -------------------------
 
+* Workaround for issue 103 so you can use borderPadding as a list (but it will look wrong
+  if you are using wordaxe <= 0.3.2) 
+* Added fieldvalue style for field lists
+* Added optionlist tstyle, for option lists
+* Added collection of utility stylesheets and documented it
+* Improved command line parsing and stylesheet loading (guess
+  extension like latest rst2latex does)
 * Fixed Issue 67: completely new list layouting code
 * Fixed Issue 116: crashes caused by huge images
 * Better support for %width in images, n2ow it's % of the container frame's
